--- a/index.html
+++ b/index.html
@@ -149,10 +149,11 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 
 /* Card */
 .card{display:block;background:#fff;border:1px solid var(--border);border-radius:16px;box-shadow:var(--shadow1);overflow:hidden;transition:transform var(--dur) var(--ease),box-shadow var(--dur) var(--ease),background var(--dur) var(--ease)}
-.card:hover{transform:translateY(-3px);box-shadow:var(--shadow2)}
-.log-list .card{--row-bg:transparent;position:relative;margin:0;background:var(--row-bg);border:0;border-bottom:1px solid var(--border);border-radius:0;box-shadow:none;overflow:hidden;transition:background var(--dur) var(--ease),border-color var(--dur) var(--ease);flex:0 0 auto}
+.card:hover{transform:none;box-shadow:var(--shadow1)}
+.log-list .card{--row-bg:transparent;position:relative;margin:0;background:transparent;border:0;border-bottom:1px solid var(--border);border-radius:0;box-shadow:none;overflow:hidden;transition:border-color var(--dur) var(--ease);flex:0 0 auto}
 .log-list .card:first-child{border-top:1px solid var(--border)}
-.log-list .card::before{content:"";position:absolute;inset:0;pointer-events:none;border-left:3px solid transparent;transition:border-color var(--dur) var(--ease)}
+.log-list .card::before{content:"";position:absolute;inset:0;pointer-events:none;border-left:3px solid transparent;transition:border-color var(--dur) var(--ease);z-index:1}
+.log-list .card::after{content:"";position:absolute;inset:0;background:var(--row-bg);pointer-events:none;transition:background var(--dur) var(--ease);z-index:0}
 .log-list .card>*{position:relative;z-index:1}
 .log-list .card:hover{--row-bg:rgba(15,23,42,.03)}
 .log-list .card.open{--row-bg:#fff}
@@ -204,6 +205,14 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
 .log-row-chips .pill.gain{background:rgba(34,197,94,.14);border-color:rgba(34,197,94,.3);color:#166534}
 .log-row-chips .pill.loss{background:rgba(248,113,113,.16);border-color:rgba(248,113,113,.32);color:#b91c1c}
 .log-row-chips .pill.neutral{background:rgba(148,163,184,.14);border-color:rgba(148,163,184,.28);color:var(--muted)}
+.log-row-chips .pill.pill-gp,
+.log-row-chips .pill.pill-gp.gain,
+.log-row-chips .pill.pill-gp.loss,
+.log-row-chips .pill.pill-gp.neutral{background:#fef3c7;border-color:#facc15;color:#854d0e}
+.log-row-chips .pill.pill-dtd,
+.log-row-chips .pill.pill-dtd.gain,
+.log-row-chips .pill.pill-dtd.loss,
+.log-row-chips .pill.pill-dtd.neutral{background:#e2e8f0;border-color:#cbd5f5;color:#334155}
 .pill{background:#fff7e6;color:#a05a00;border:1px solid #ffe3b0;border-radius:999px;padding:4px 8px;font-weight:700;font-size:11px}
 @keyframes log-row-scroll{
   0%{transform:translateX(0)}
@@ -3781,12 +3790,12 @@ function makeCard(a,idx){
     const parts=[];
     const dateText=fmtDate(entry.date);
     if(dateText && dateText!=='—') parts.push(dateText);
-    const dmText=normalizeDisplayValue(entry.dm);
-    if(dmText) parts.push(`DM: ${dmText}`);
     const codeText=normalizeDisplayValue(entry.code);
     if(codeText) parts.push(`Code: ${codeText}`);
+    const dmText=normalizeDisplayValue(entry.dm);
+    if(dmText) parts.push(`DM: ${dmText}`);
     if(isActivityEntry(entry)) parts.push('Downtime activity');
-    return parts.join(' • ');
+    return parts.join('   •   ');
   };
 
   const metaSpan=document.createElement('span');
@@ -3811,11 +3820,13 @@ function makeCard(a,idx){
   if(act){
     if(gp){
       const gpPill=pill('GP '+fmtSigned(gp));
+      gpPill.classList.add('pill-gp');
       applyValueStyle(gpPill,gp);
       chips.appendChild(gpPill);
     }
     if(dtd){
       const dtPill=pill('DTD '+fmtSigned(dtd));
+      dtPill.classList.add('pill-dtd');
       applyValueStyle(dtPill,dtd);
       chips.appendChild(dtPill);
     }
@@ -3823,12 +3834,14 @@ function makeCard(a,idx){
     const netGP=(a.gp_net==null?gp:a.gp_net);
     const gpValue=Number(netGP);
     const gpPill=pill('GP '+fmtSigned(gpValue));
+    gpPill.classList.add('pill-gp');
     applyValueStyle(gpPill,gpValue);
     chips.appendChild(gpPill);
     const netDTD=(a.dtd_net==null?dtd:a.dtd_net);
     const dtValue=Number(netDTD);
     if(dtValue){
       const dtPill=pill('DTD '+fmtSigned(dtValue));
+      dtPill.classList.add('pill-dtd');
       applyValueStyle(dtPill,dtValue);
       chips.appendChild(dtPill);
     }
