--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   .header-quick{flex-direction:column;align-items:flex-start;gap:12px}
   .inventory-buttons{margin-left:0}
   .log-row{flex-direction:column;align-items:flex-start}
-  .log-row-chips{margin-left:0;padding-left:0;justify-content:flex-start}
+  .log-row-chips{margin-left:0;padding-left:0;justify-items:start}
 }
 
 /* Grid / masonry columns */
@@ -199,11 +199,12 @@ h1{margin:0;font-size:28px;line-height:1.05;font-weight:800;letter-spacing:-0.01
   .log-row-title.scrollable:hover .display{animation:none}
 }
 .chips{display:flex;gap:6px;flex-wrap:wrap;margin-top:0;min-height:0}
-.log-row-chips{margin-left:auto;justify-content:flex-end;flex-wrap:nowrap;gap:10px;align-items:center;overflow:hidden;padding-left:8px;font-size:13px;color:var(--muted);flex-shrink:0}
-.log-row-chips:empty{display:none}
+.log-row-chips{margin-left:auto;display:grid;grid-template-columns:repeat(3,minmax(88px,max-content));column-gap:10px;row-gap:6px;align-items:center;justify-items:end;overflow:hidden;padding-left:8px;font-size:13px;color:var(--muted);flex-shrink:0}
+.log-row-chips .chip-slot{display:flex;justify-content:flex-end;min-width:88px}
+.log-row-chips .chip-slot-empty{visibility:hidden}
 .log-row-chips .pill{display:inline-flex;align-items:center;white-space:nowrap;background:rgba(148,163,184,.12);border:1px solid rgba(148,163,184,.24);border-radius:999px;padding:4px 10px;font-weight:600;font-size:12px;color:inherit;box-shadow:none}
-.log-row-chips .pill.pill-level{background:rgba(59,130,246,.12);border-color:rgba(59,130,246,.32);color:#1d4ed8}
-.log-row-chips .pill.pill-level.pill-level-gain{background:transparent;border-color:rgba(29,78,216,.82);color:#1d4ed8;box-shadow:0 0 0 1px rgba(29,78,216,.18)}
+.log-row-chips .pill.pill-level{background:transparent;border-color:rgba(59,130,246,.32);color:#1d4ed8}
+.log-row-chips .pill.pill-level.pill-level-gain{background:rgba(59,130,246,.14);border-color:rgba(59,130,246,.42);color:#1d4ed8;box-shadow:none}
 .log-row-chips .pill.gain{background:rgba(34,197,94,.14);border-color:rgba(34,197,94,.3);color:#166534}
 .log-row-chips .pill.loss{background:rgba(248,113,113,.16);border-color:rgba(248,113,113,.32);color:#b91c1c}
 .log-row-chips .pill.neutral{background:rgba(148,163,184,.14);border-color:rgba(148,163,184,.28);color:var(--muted)}
@@ -3835,6 +3836,25 @@ function makeCard(a,idx){
   metaSpan.textContent=buildHeaderMeta(a);
 
   const chips=document.createElement('div'); chips.className='chips log-row-chips';
+  const createSlot=(className)=>{
+    const slot=document.createElement('div');
+    slot.className=`chip-slot ${className} chip-slot-empty`;
+    slot.setAttribute('aria-hidden','true');
+    return slot;
+  };
+  const levelSlot=createSlot('chip-slot-level');
+  const gpSlot=createSlot('chip-slot-gp');
+  const dtSlot=createSlot('chip-slot-dtd');
+  chips.append(levelSlot,gpSlot,dtSlot);
+  let hasChip=false;
+  const placeChip=(slot,pillEl)=>{
+    if(!slot||!pillEl) return;
+    slot.innerHTML='';
+    slot.appendChild(pillEl);
+    slot.classList.remove('chip-slot-empty');
+    slot.removeAttribute('aria-hidden');
+    hasChip=true;
+  };
   const applyValueStyle=(pillEl,value)=>{
     if(!pillEl) return;
     pillEl.classList.remove('gain','loss','neutral');
@@ -3850,20 +3870,20 @@ function makeCard(a,idx){
     if(Number.isFinite(levelGain) && levelGain>0){
       levelPill.classList.add('pill-level-gain');
     }
-    chips.appendChild(levelPill);
+    placeChip(levelSlot,levelPill);
   }
   if(act){
     if(gp){
       const gpPill=pill('GP '+fmtSigned(gp));
       gpPill.classList.add('pill-gp');
       applyValueStyle(gpPill,gp);
-      chips.appendChild(gpPill);
+      placeChip(gpSlot,gpPill);
     }
     if(dtd){
       const dtPill=pill('DTD '+fmtSigned(dtd));
       dtPill.classList.add('pill-dtd');
       applyValueStyle(dtPill,dtd);
-      chips.appendChild(dtPill);
+      placeChip(dtSlot,dtPill);
     }
   }else{
     const netGP=(a.gp_net==null?gp:a.gp_net);
@@ -3871,17 +3891,19 @@ function makeCard(a,idx){
     const gpPill=pill('GP '+fmtSigned(gpValue));
     gpPill.classList.add('pill-gp');
     applyValueStyle(gpPill,gpValue);
-    chips.appendChild(gpPill);
+    placeChip(gpSlot,gpPill);
     const netDTD=(a.dtd_net==null?dtd:a.dtd_net);
     const dtValue=Number(netDTD);
     if(dtValue){
       const dtPill=pill('DTD '+fmtSigned(dtValue));
       dtPill.classList.add('pill-dtd');
       applyValueStyle(dtPill,dtValue);
-      chips.appendChild(dtPill);
+      placeChip(dtSlot,dtPill);
     }
   }
-  main.appendChild(chips);
+  if(hasChip){
+    main.appendChild(chips);
+  }
   hd.appendChild(main);
 
   const refreshScrollState=(wrapper)=>{
